Adding *.xcworkspalce to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -112,7 +112,7 @@ iOSInjectionProject/
 # Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
+*.xcworkspace
 
 # Carthage
 #
